--- a/src/pages/reset-password/reset-password.component.html
+++ b/src/pages/reset-password/reset-password.component.html
@@ -4,7 +4,7 @@
     <div class="flex justify-between">
       <div class="puzzle-with-people-img"></div>
       <h1 class="medium text-right self-center neutrals-text-950">
-        Reset your password
+        סיסמא חדשה
       </h1>
     </div>
     <smarti-reset-password-form></smarti-reset-password-form>
