--- a/src/shared/layout/registration-layout/registration-footer/registration-footer.component.html
+++ b/src/shared/layout/registration-layout/registration-footer/registration-footer.component.html
@@ -1,9 +1,9 @@
 <div class="registration-footer flex margin-0-auto justify-between">
   <div class="paragraph-text-medium text-underline text-center neutrals-text-950 cursor-pointer">
-    Skip it for now
+    דלג
   </div>
   <div class="paragraph-text-medium text-right neutrals-text-950">
-    You have a question or concern.
-    <span class="bright-turquoise-text-500 cursor-pointer">Contact us</span>
+    למידע נוסף
+    <span class="bright-turquoise-text-500 cursor-pointer">צרו קשר</span>
   </div>
 </div>
