--- a/src/features/reset-password-form/form-container-reset-password/set-new-password/set-new-password.component.html
+++ b/src/features/reset-password-form/form-container-reset-password/set-new-password/set-new-password.component.html
@@ -1,22 +1,22 @@
 <div class="margin-rl-auto flex flex-col">
-  <h3 class="mt-10 medium text-center neutrals-text-950">Enter new password twice</h3>
+  <h3 class="mt-10 medium text-center neutrals-text-950">הכניסו סיסמא חדשה</h3>
   <div class="mt-24 flex justify-center">
     <smarti-input-password
       [customWidth]="'536px'"
-      [placeholder]="'Password*'"
+      [placeholder]="'סיסמא*'"
       (outputValue)="onChangeFirstPasswordValue($event)"
     ></smarti-input-password>
   </div>
   <div class="mt-14 flex justify-center">
     <smarti-input-password
       [customWidth]="'536px'"
-      [placeholder]="'Repeat Password*'"
+      [placeholder]="'הכנס סיסמא בשנית*'"
       (outputValue)="onChangeSecondPasswordValue($event)"
     ></smarti-input-password>
   </div>
   <div class="mt-32 mb-16 flex justify-center">
     <smarti-button
-      [text]="'Reset Password'"
+      [text]="'איפוס סיסמא'"
       [typeClass]="'confirm'"
       [customButtonWidth]="'256px'"
       [disabled]="isDisabled"
@@ -31,11 +31,11 @@
 >
   <smarti-success-dialog
     [observer]="observer"
-    [headerText]="'Your password has been successfully reset'"
+    [headerText]="'הסיסמא עודכנה בהצלחה'"
     [customHeaderHeight]="'391px'"
     [customDescriptionHeight]="'457px'"
-    [descriptionText]="'Your password has been reset, use new password to Log In into the Smarti panel'"
-    [buttonText]="'Log In'"
+    [descriptionText]="'הסיסמא שלך עודכנה ניתן להשתמש בסיסמא החדשה להתחבר לסמרטי'"
+    [buttonText]="'התחברות'"
     [redirectLink]="'/login'"
   ></smarti-success-dialog>
 </ng-template>
