--- a/src/features/reset-password-form/form-container-reset-password/verify-step/verify-step.component.html
+++ b/src/features/reset-password-form/form-container-reset-password/verify-step/verify-step.component.html
@@ -1,9 +1,9 @@
 <div class="margin-rl-auto flex flex-col">
-  <h3 class="mt-10 medium text-center neutrals-text-950">In order to reset the password, send me a code using</h3>
+  <h3 class="mt-10 medium text-center neutrals-text-950">לטובת עדכון סיסמא,ניתן לשלוח קוד באמצעות</h3>
   <div class="mt-20 flex justify-center">
     <smarti-radio
-      [labelFirstText]="'Email address <b>name@mail.com</b>'"
-      [labelSecondText]="'Phone Number <b>050****565</b>'"
+      [labelFirstText]="'כתובת מייל <b>name@mail.com</b>'"
+      [labelSecondText]="'מספר טלפון <b>050****565</b>'"
       [items]="items"
       (chosenValue)="doChangeContent($event)"
     ></smarti-radio>
@@ -24,7 +24,7 @@
     </div>
     <div
       class="mt-14 bright-turquoise-text-500 text-underline text-center paragraph-text-medium cursor-pointer"
-    >Resend OTP code</div>
+    >שלח קוד מחדש</div>
   </div>
 
   <div
@@ -34,7 +34,7 @@
     <smarti-button
       [customButtonWidth]="'431px'"
       [typeClass]="'confirm'"
-      [text]="'Confirm and Reset your Password'"
+      [text]="'אישור ואיפוס סיסמא '"
       [disabled]="isDisabled"
       (buttonClicked)="doChangeStep('forward')"
     ></smarti-button>
@@ -42,7 +42,7 @@
       class="usual-button-no-size go-back cursor-pointer smarti-button-text rounded-m flex gap-2 items-center justify-center"
       (click)="redirectToLogin()"
     >
-      <div>Go Back</div>
+      <div>חזרה</div>
       <div class="arrow-left-icon"></div>
     </button>
   </div>
