--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,16 +1,15 @@
 <div class="bg-neutral-20">
   <smarti-header-auth-layout
     [haveLeftBLock]="true"
-    [leftBlockText]="'Don’t have an account?'"
-    [leftBlockClickedText]="'Register Now'"
+    [leftBlockText]="'אין לך חשבון?'"
+    [leftBlockClickedText]="'התחברות'"
     [redirectLink]="'/registration'"
   ></smarti-header-auth-layout>
   <div class="width-full-hd margin-0-auto">
     <div class="flex justify-between">
       <div class="seated-working-woman-img"></div>
       <h1 class="medium text-right self-center neutrals-text-950">
-        <div>Welcome back In to</div>
-        <div>Smarti Panel</div>
+        <div>התחברות</div>
       </h1>
     </div>
     <smarti-login-form></smarti-login-form>
