--- a/src/shared/layout/contact-us-footer-layout/contact-us-footer-layout.component.html
+++ b/src/shared/layout/contact-us-footer-layout/contact-us-footer-layout.component.html
@@ -1,6 +1,6 @@
 <div class="login-footer mt-14 mg-20 margin-rl-auto flex justify-end">
   <div class="paragraph-text-medium text-right neutrals-text-950">
-    You have a question or concern.
-    <span class="bright-turquoise-text-500 cursor-pointer">Contact us</span>
+    יש לכם שאלות?
+    <span class="bright-turquoise-text-500 cursor-pointer">צרו קשר</span>
   </div>
 </div>
