added connection to swagger and add createEmployer from sign in service, open-api-generator with configuration from swagger yaml file

--- a/src/pages/registration/registration.component.html
+++ b/src/pages/registration/registration.component.html
@@ -31,7 +31,7 @@
       </ng-template>
     </div>
     <smarti-registration-form
-      style="display: inline-block; margin-bottom: 54px"
+      class="smarti-registration-form"
       (changingStep)="doChangingImage($event)"
     ></smarti-registration-form>
   </div>
