--- a/src/shared/ui/input-number/input-number.component.html
+++ b/src/shared/ui/input-number/input-number.component.html
@@ -1,22 +1,17 @@
-<form
-  class="b-form"
-  [formGroup]="formInput"
+<tui-input
+  tuiTextfieldSize="m"
+  [formControl]="control"
+  [tuiTextfieldLabelOutside]="true"
+  [style.width]="customWidth"
 >
-  <tui-input
-    tuiTextfieldSize="m"
-    formControlName="inputValue"
-    [tuiTextfieldLabelOutside]="true"
-    [style.width]="customWidth"
-  >
-    {{ placeholder }}
-    <input
-      tuiTextfield
-      inputmode="numeric"
-      (keyup)="changeValue()"
-      [maskito]="maxLengthMask"
-      [ngClass]="{
-      'center-verify': centerVerify,
-    }"
-    />
-  </tui-input>
-</form>
+  {{ placeholder }}
+  <input
+    tuiTextfield
+    inputmode="numeric"
+    (keyup)="changeValue()"
+    [maskito]="maxLengthMask"
+    [ngClass]="{
+    'center-verify': centerVerify,
+  }"
+  />
+</tui-input>
