--- a/src/assets/styles/inputs.scss
+++ b/src/assets/styles/inputs.scss
@@ -1,4 +1,4 @@
-tui-input, tui-input-password {
+tui-input, tui-input-password, tui-input-phone {
   direction: rtl!important;
   text-align: right!important;
   border-radius: 8px!important;
