fix code style in component.ts files add types and fix imports

--- a/src/shared/ui/date-picker/date-picker.component.html
+++ b/src/shared/ui/date-picker/date-picker.component.html
@@ -1,13 +1,11 @@
-<ng-container [formGroup]="dateForm">
-  <tui-input-date
-    [style.width]="customWidth"
-    [style.text-align]="'right'"
-    [style.height]="'56px'"
-    [pseudoInvalid]="invalid"
-    [tuiTextfieldLabelOutside]="true"
-    [formControl]="dateForm.controls.dateValue"
-    [tuiTextfieldSize]="'m'"
-  >
-    {{ placeholder }}
-  </tui-input-date>
-</ng-container>
+<tui-input-date
+  [style.width]="customWidth"
+  [style.text-align]="'right'"
+  [style.height]="'56px'"
+  [pseudoInvalid]="invalid"
+  [tuiTextfieldLabelOutside]="true"
+  [formControl]="control"
+  [tuiTextfieldSize]="'m'"
+>
+  {{ placeholder }}
+</tui-input-date>
