--- a/src/shared/ui/radio/radio.component.html
+++ b/src/shared/ui/radio/radio.component.html
@@ -1,17 +1,15 @@
-<form [formGroup]="radioForm">
-  <tui-radio-labeled
-    formControlName="radioValue"
-    [item]="items[0]"
-    (change)="changeValue(items[0].name)"
-  >
-    <div class="dir-rtl" [innerHTML]="labelFirstText"></div>
-  </tui-radio-labeled>
-  <tui-radio-labeled
-    class="mt-6"
-    formControlName="radioValue"
-    [item]="items[1]"
-    (change)="changeValue(items[1].name)"
-  >
-    <div class="dir-rtl" [innerHTML]="labelSecondText"></div>
-  </tui-radio-labeled>
-</form>
+<tui-radio-labeled
+  [formControl]="radioValue"
+  [item]="items[0]"
+  (change)="changeValue(items[0].name)"
+>
+  <div class="dir-rtl" [innerHTML]="labelFirstText"></div>
+</tui-radio-labeled>
+<tui-radio-labeled
+  class="mt-6"
+  [formControl]="radioValue"
+  [item]="items[1]"
+  (change)="changeValue(items[1].name)"
+>
+  <div class="dir-rtl" [innerHTML]="labelSecondText"></div>
+</tui-radio-labeled>
