--- a/src/features/registration-form/form-container/form-container.component.html
+++ b/src/features/registration-form/form-container/form-container.component.html
@@ -1,25 +1,22 @@
 <ng-container [ngSwitch]="currentStep$ | async">
   <smarti-personal-info
     *ngSwitchCase="'personalInfo'"
-    [startingForm]="userForm.get('personalInfo')?.value"
+    [startingForm]="registrationForm.get('personalInfo')?.value"
+    [currentFormStateValue]="registrationForm.value"
     (subformInitialized)="subformInitialized('personalInfo', $event)"
     (changeStep)="changeStep('personalInfoStep', $event)"
   ></smarti-personal-info>
-  <smarti-select-year-and-month
-    *ngSwitchCase="'loginInfo'"
-    [startingForm]="userForm.get('loginInfo')?.value"
-    (subformInitialized)="subformInitialized('loginInfo', $event)"
-    (changeStep)="changeStep('loginInfoStep', $event)"
-  ></smarti-select-year-and-month>
   <smarti-upload-document
     *ngSwitchCase="'uploadDocumentInfo'"
-    [startingForm]="userForm.get('uploadDocumentInfo')?.value"
+    [startingForm]="registrationForm.get('uploadDocumentInfo')?.value"
+    [currentFormStateValue]="registrationForm.value"
     (subformInitialized)="subformInitialized('uploadDocumentInfo', $event)"
     (changeStep)="changeStep('uploadDocumentStep', $event)"
   ></smarti-upload-document>
   <smarti-verify-email
     *ngSwitchCase="'verifyEmailInfo'"
-    [startingForm]="userForm.get('verifyEmailInfo')?.value"
+    [startingForm]="registrationForm.get('verifyEmailInfo')?.value"
+    [currentFormStateValue]="registrationForm.value"
     (subformInitialized)="subformInitialized('verifyEmailInfo', $event)"
     (changeStep)="changeStep('verifyEmailStep', $event)"
   ></smarti-verify-email>
