add payment method to registration process, fix changes in api

--- a/src/assets/styles/bg-colors.scss
+++ b/src/assets/styles/bg-colors.scss
@@ -2,9 +2,10 @@
   background: $white;
 }
 
-.bg-neutral-20 {
-  background: $neutral-20;
+.bg-neutrals-20 {
+  background: $neutrals-20;
 }
+
 
 .bg-neutrals-950 {
   background: $neutrals-950;
@@ -24,6 +25,10 @@
 
 .bg-bright-turquoise-500 {
   background: $bright-turquoise-500;
+}
+
+.bg-bright-turquoise-100 {
+  background: $bright-turquoise-100;
 }
 
 .bg-pumpkin-400 {
