--- a/src/assets/styles/borders.scss
+++ b/src/assets/styles/borders.scss
@@ -4,6 +4,10 @@
   border: 1px solid $green-success-500;
 }
 
+.border-bright-turquoise-500 {
+  border: 1px solid $bright-turquoise-500;
+}
+
 .border-neutrals-800 {
   border: 1px solid $neutrals-800;
 }
