--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -8,7 +8,7 @@
 }
 
 .button-interaction:disabled {
-  background: $neutral-100;
+  background: $neutrals-100;
 }
 
 .confirm-button {
@@ -21,7 +21,7 @@
 }
 
 .confirm-button:disabled {
-  background: $neutral-100;
+  background: $neutrals-100;
 }
 
 .dark-button {
@@ -34,7 +34,7 @@
 }
 
 .dark-button:disabled {
-  background: $neutral-100;
+  background: $neutrals-100;
 }
 
 .usual-button {
