--- a/src/assets/styles/dialogs.scss
+++ b/src/assets/styles/dialogs.scss
@@ -1,6 +1,6 @@
 tui-dialog{
   .t-content {
-    background: $neutral-20!important;
+    background: $neutrals-20!important;
     tui-input .t-content {
       background: $white!important;
     }
