--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,7 +1,9 @@
 $white: #FFFFFF;
-$neutral-20: #F7F9FC;
-$neutral-50: #ECEEF2;
-$neutral-100: #D4DAE3;
+$neutrals-20: #F7F9FC;
+$neutrals-50: #ECEEF2;
+$neutrals-100: #D4DAE3;
+
+$neutrals-300: #8393AD;
 
 $neutrals-500: #4F5F7A;
 
@@ -10,6 +12,7 @@ $neutrals-900: #1C1F27;
 $neutrals-950: #171A21;
 
 $bright-turquoise-50: #EFFEFB;
+$bright-turquoise-100: #C7FFF4;
 $bright-turquoise-500: #02CAB3;
 $bright-turquoise-600: #00A393;
 
