--- a/src/features/reset-password-form/form-container-reset-password/verify-step/verify-step.component.html
+++ b/src/features/reset-password-form/form-container-reset-password/verify-step/verify-step.component.html
@@ -5,6 +5,7 @@
       [labelFirstText]="'כתובת מייל <b>name@mail.com</b>'"
       [labelSecondText]="'מספר טלפון <b>050****565</b>'"
       [items]="items"
+      [radioValue]="radioValue"
       (chosenValue)="doChangeContent($event)"
     ></smarti-radio>
   </div>
