--- a/src/shared/ui/input-file/input-file.component.html
+++ b/src/shared/ui/input-file/input-file.component.html
@@ -50,7 +50,7 @@
       </div>
       <div class="caption-text neutrals-text-500">or</div>
       <button
-        class="upload-button mt-2 text-center paragraph-text-extra rounded-l bright-turquoise-text-500 bg-neutral-20 items-center flex gap-2 justify-center"
+        class="upload-button mt-2 text-center paragraph-text-extra rounded-l bright-turquoise-text-500 bg-neutrals-20 items-center flex gap-2 justify-center"
       >
         <div class="svg-uploaded"></div>
         <div>Browse files</div>
@@ -65,7 +65,7 @@
       </div>
       <div class="caption-text neutrals-text-500">or</div>
       <button
-        class="upload-button mt-2 text-center paragraph-text-extra rounded-l bright-turquoise-text-500 bg-neutral-20 items-center flex gap-2 justify-center"
+        class="upload-button mt-2 text-center paragraph-text-extra rounded-l bright-turquoise-text-500 bg-neutrals-20 items-center flex gap-2 justify-center"
       >
         <div class="svg-uploaded"></div>
         <div>Browse files</div>
