--- a/src/assets/styles/margins.scss
+++ b/src/assets/styles/margins.scss
@@ -1,3 +1,7 @@
+.m-6 {
+  margin: 24px;
+}
+
 /* margin-top */
 .mt-0 {
   margin-top: 0;
@@ -67,12 +71,20 @@
   margin-top: 160px;
 }
 
+.mt-56 {
+  margin-top: 224px;
+}
+
 .mt-60 {
   margin-top: 240px;
 }
 
 .mt-64 {
   margin-top: 256px;
+}
+
+.mt-70-5 {
+  margin-top: 274px;
 }
 
 .mt-104 {
@@ -86,6 +98,10 @@
 
 .mb-1 {
   margin-bottom: 4px;
+}
+
+.mb-2 {
+  margin-bottom: 8px;
 }
 
 .mb-4 {
@@ -164,6 +180,10 @@
   margin-left: 24px;
 }
 
+.ml-10 {
+  margin-left: 40px;
+}
+
 .ml-20 {
   margin-left: 80px;
 }
@@ -194,4 +214,9 @@
 .margin-rl-auto {
   margin-right: auto;
   margin-left: auto;
+}
+
+.margin-rl-64 {
+  margin-right: 64px;
+  margin-left: 64px;
 }
