--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="bg-neutral-20">
+<div class="bg-neutrals-20">
   <smarti-header-auth-layout
     [haveLeftBLock]="true"
     [leftBlockText]="'אין לך חשבון?'"
