--- a/src/pages/reset-password/reset-password.component.html
+++ b/src/pages/reset-password/reset-password.component.html
@@ -1,4 +1,4 @@
-<div class="bg-neutral-20">
+<div class="bg-neutrals-20">
   <smarti-header-auth-layout [haveLeftBLock]="false"></smarti-header-auth-layout>
   <div class="width-full-hd margin-0-auto">
     <div class="flex justify-between">
