add dashboard page, add dashboard header and notification, add ui components accordion and multiselect

--- a/src/assets/styles/text.scss
+++ b/src/assets/styles/text.scss
@@ -175,6 +175,14 @@ h4 {
   line-height: 20px;
 }
 
+.button-text-small {
+  font-family: Rubik, sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+}
+
 .extra-small-text {
   font-family: Rubik, sans-serif;
   font-size: 10px;
