--- a/src/shared/ui/button/button.component.scss
+++ b/src/shared/ui/button/button.component.scss
@@ -5,3 +5,10 @@
   letter-spacing: 0.4px;
   cursor: pointer;
 }
+
+.file-icon {
+  background: url("/assets/svg/document-download-small-icon.svg");
+  width: 12px;
+  height: 12px;
+  margin-left: 4px;
+}
