--- a/src/assets/styles/margins.scss
+++ b/src/assets/styles/margins.scss
@@ -1,5 +1,13 @@
+.m-2 {
+  margin: 8px;
+}
+
 .m-6 {
   margin: 24px;
+}
+
+.m-8 {
+  margin: 32px;
 }
 
 /* margin-top */
@@ -150,6 +158,10 @@
   margin-right: 0;
 }
 
+.mr-4 {
+  margin-right: 16px;
+}
+
 .mr-6 {
   margin-right: 24px;
 }
@@ -171,6 +183,9 @@
 }
 
 /* margin-left */
+.ml-4 {
+  margin-left: 16px;
+}
 
 .ml-5 {
   margin-left: 20px;
