--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@
 @import "selects";
 @import "date-picker";
 @import "dialogs";
+@import "accordion";
 
 body {
   margin: 0;
@@ -34,6 +35,10 @@ body {
 
 .items-center {
   align-items: center;
+}
+
+.items-flex-end {
+  align-items: flex-end;
 }
 
 .self-center {
@@ -60,8 +65,20 @@ body {
   direction: rtl;
 }
 
+.height-full {
+  height: 100%;
+}
+
+.height-72 {
+  height: 72px;
+}
+
 .width-360 {
   width: 360px;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .width-full-hd {
