add dashboard header, menu with switcher, started work on dashboard home page, fix bugs

--- a/src/assets/styles/bg-colors.scss
+++ b/src/assets/styles/bg-colors.scss
@@ -23,13 +23,18 @@
   background: $green-success-50;
 }
 
-.bg-bright-turquoise-500 {
-  background: $bright-turquoise-500;
+.bg-bright-turquoise-50 {
+  background: $bright-turquoise-50;
 }
 
 .bg-bright-turquoise-100 {
   background: $bright-turquoise-100;
 }
+
+.bg-bright-turquoise-500 {
+  background: $bright-turquoise-500;
+}
+
 
 .bg-pumpkin-400 {
   background: $pumpkin-base-400;
