--- a/src/assets/styles/margins.scss
+++ b/src/assets/styles/margins.scss
@@ -27,6 +27,10 @@
   margin-top: 16px;
 }
 
+.mt-5 {
+  margin-top: 20px;
+}
+
 .mt-6 {
   margin-top: 24px;
 }
@@ -183,6 +187,10 @@
 }
 
 /* margin-left */
+.ml-auto {
+  margin-left: auto;
+}
+
 .ml-4 {
   margin-left: 16px;
 }
