--- a/src/shared/ui/button/button.component.html
+++ b/src/shared/ui/button/button.component.html
@@ -10,7 +10,8 @@
       'button-interaction': typeClass === 'interaction',
       'dark-button': typeClass === 'dark',
       'paragraph-text-extra': paragraphTextExtra,
-      'button-text-small': buttonTextSmall
+      'button-text-small': buttonTextSmall,
+      'z-10': isNeedZIndex
     }"
     [style.border]="customBorder"
     [style.border-radius]="customBorderRadius"
