--- a/src/assets/styles/paddings.scss
+++ b/src/assets/styles/paddings.scss
@@ -1,3 +1,13 @@
 .p-6 {
   padding: 24px;
 }
+
+.py-1 {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.px-2 {
+  padding-right: 8px;
+  padding-left: 8px;
+}
