--- a/src/pages/dashboard/dashboard.component.html
+++ b/src/pages/dashboard/dashboard.component.html
@@ -1,3 +1,11 @@
 <smarti-dashboard-header></smarti-dashboard-header>
 <div class="white-background-absolute-block"></div>
-<smarti-dashboard-notification></smarti-dashboard-notification>
+<div class="flex flex-row justify-between gap-12">
+  <smarti-dashboard-notification></smarti-dashboard-notification>
+  <div class="w-full">
+    <smarti-dashboard-main></smarti-dashboard-main>
+  </div>
+  <div>
+    <smarti-dashboard-menu></smarti-dashboard-menu>
+  </div>
+</div>
